--- a/new-site/style.css
+++ b/new-site/style.css
@@ -28,27 +28,31 @@ sans-serif;
 
 .header {
     padding-top: 12px;
-
 }
 
 .container {
     width: 1378px;
     padding: 0 32px;
+    margin: 0 auto;
 }
 
 .header__inner {
     display: flex;
     justify-content: space-between;
     text-align: center;
+    margin-bottom: 22px;
 }
 
 .logo__link {
-    padding-right: 500px;
+    /* padding-right: 500px; */
 }
 
-.logo__img {}
+.logo__img {
+    margin-left: 32px;
+}
 
 .nav__top {
+    margin-left: 460px;
    
 }
 
